# SocMed

./: pyproject.toml  run
CircleUp/: index.html  package-lock.json  package.json
CircleUp/src/: App.tsx  CommonFunctions.tsx  defaults.ts  typedef.ts
CircleUp/src/components/: UserList.tsx  postCard.css  postCard.tsx  searchBar.tsx  sidebar.tsx
CircleUp/src/pages/: Chat.tsx  ChatUser.tsx  CreatePost.tsx  EditProfile.tsx  Followers.tsx  Following.tsx  Home.tsx  UserProfile.tsx  layout.tsx  login.tsx  signup.tsx
SocialMedia/: db.sqlite3  seeds.py
SocialMedia/ChatApp/: ChatViews.py  Serializers.py  models.py  urls.py
SocialMedia/ChatApp/migrations/: 0001_initial.py
SocialMedia/SocialMedia/: asgi.py  settings.py  urls.py
SocialMedia/SocialMediaApp/: authentication.py  comments.py  followers.py  google_auth.py  google_github_auth.py  hash.py  image_upload.py  middleware.py  models.py  posts.py  serializers.py  service.py  urls.py  user_credentials.py  user_post.py  views.py
SocialMedia/SocialMediaApp/migrations/: 0001_initial.py  0002_alter_user_profile_pic_post.py  0003_comment.py  0004_alter_credentials_auth_id_and_more.py  0005_user_bio.py
SocialMedia/templates/: websocketpage.html
